welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: type color
	var depart:color = getCouleurSol()
                   ^Array1:9: error: not found: value newArray
	var tab = newArray[color](hauteur)
                  ^