welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var depart:color = getCouleurSol()
	var hauteur = 0
		do{
		avance()
		hauteur = hauteur + 1
	}while (getCouleurSol!=depart)
	var tab = newArray[color](hauteur)
	for(i <- 0 to hauteur-1){
		tab(i) = getCouleurSol();
		avance()
		}
}
